--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
-	overflow-x:hidden;
+	overflow-y:hidden;
 	font-family: "Roboto"
 }
 body{
 	background-color: rgb(17,17,27);
+	color: #94e2d5;
 	
 }
 .header{
@@ -19,6 +20,12 @@ display:flex;
 gap:55px;
 align-items: center;
 }
+.projects>a{
+	text-decoration: none;
+	font-size:2.0vw;
+	color: #94e2d5;
+
+}
 
 
 .main{
@@ -29,12 +36,11 @@ align-items: center;
 	min-height: 50vh;
 	max-height: 50vh;
 	min-width: 60vw;
-	margin: 15vh 20vw;	
+	margin: 10vh 20vw;	
 	border-radius: 15px;
 	box-shadow: 0 0 10px 0px #94e2d5;
 	}
 .main-text{
-	color: #94e2d5;
 	font-size: 3.2vw;
 }
 .main-text>p{
@@ -52,20 +58,14 @@ align-items: center;
 	border:2px solid  #94e2d5;
 }
 .footer{
+	margin-top:15vh;
 	display:flex;
 	justify-content: center;
 }
 .social{
-	margin-top: 5vh;
 display:flex;
 gap:55px;
 align-items: center;
-}
-.projects>a{
-	text-decoration: none;
-	font-size:2.0vw;
-	color: #94e2d5;
-
 }
 .logo{
 	width:5vw;
