--- a/style.css
+++ b/style.css
@@ -1,73 +1,124 @@
-*{
+* {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
-	overflow-y:hidden;
+	overflow-y: hidden;
 	font-family: "Roboto"
 }
-body{
-	background-color: rgb(17,17,27);
-	color: #94e2d5;
-	
+
+body {
+	background-color: #0c101c;
+	color: #e0e4f0;
 }
-.header{
-	display:flex;
+
+.header {
+	display: flex;
 	justify-content: center;
 }
-.projects{
-	margin-top:5vh;
-display:flex;
-gap:55px;
-align-items: center;
-}
-.projects>a{
-	text-decoration: none;
-	font-size:2.0vw;
-	color: #94e2d5;
 
-}
-
-
-.main{
-/* background-color: red; */
+.projects {
+	margin-top: 8vh;
 	display: flex;
-	justify-content:space-around;
+	gap: 55px;
+}
+
+.projects>a {
+	/* text-decoration: none; */
+	/* font-size: 2.0vw; */
+	/* color: #94e2d5; */
+
+	color: #5ce1e6;
+	text-decoration: none;
+	transition: color 0.2s ease;
+	overflow-x: hidden;
+}
+
+a:hover {
+	color: #ffffff;
+	text-shadow: 0 0 8px #4f9fff;
+}
+
+.main {
+	/* background-color: red; */
+	display: flex;
+	justify-content: space-around;
 	align-items: center;
 	min-height: 50vh;
 	max-height: 50vh;
 	min-width: 60vw;
-	margin: 10vh 20vw;	
+	margin: 15vh 20vw 10vh 20vw;
 	border-radius: 15px;
-	box-shadow: 0 0 10px 0px #94e2d5;
-	}
-.main-text{
+	box-shadow:
+		2px 2px 4px rgba(0, 0, 0, 0.6),
+		-2px -2px 4px rgba(255, 255, 255, 0.03);
+}
+
+.main-text {
 	font-size: 3.2vw;
 }
-.main-text>p{
-	margin-left:30px;
-	margin-top:10px;
-	font-size:1.5vw;
-}
-.main-img {
+
+.main-text>p {
+	/* margin-left: 30px; */
+	margin-top: 10px;
+	font-size: 1.6vw;
 }
 
+/* .main-img {} */
+/**/
+/**/
+/* .doggo { */
+/* 	border-radius: 50%; */
+/* 	max-width: 15vw; */
+/* 	border: 2px solid #e0e4f0; */
+/* 	box-shadow: */
+/* 		2px 2px 4px rgba(0, 0, 0, 0.6), */
+/* 		-2px -2px 4px rgba(255, 255, 255, 0.03); */
+/* } */
+.main-img {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 
 .doggo {
-	border-radius:50%;
-	max-width:15vw;
-	border:2px solid  #94e2d5;
+	border-radius: 50%;
+	max-width: 15vw;
+	/* border: 2px solid #e0e4f0; */
+	/* box-shadow: */
+	/* 	2px 2px 4px rgba(0, 0, 0, 0.6), */
+	/* 	-2px -2px 4px rgba(255, 255, 255, 0.03); */
+	object-fit: cover;
+	aspect-ratio: 1/1;
+	margin-right: 5vw;
+	margin-bottom: 2vw;
+	/* This ensures the container is perfectly circular */
 }
-.footer{
-	margin-top:15vh;
-	display:flex;
+
+.footer {
+	margin-top: 15vh;
+	display: flex;
 	justify-content: center;
 }
-.social{
-display:flex;
-gap:55px;
-align-items: center;
-}
-.logo{
-	width:5vw;
-	height:5vh;
 
+.social {
+	display: flex;
+	gap: 55px;
+	align-items: center;
+}
+
+.logo {
+	width: 4vw;
+	height: 4vh;
+	fill: "#94e2d5";
+	transition: all 0.3s ease;
+	fill: #94e2d5;
+}
+
+/* .logo>path { */
+/* 	fill: #94e2d5; */
+/* } */
+
+.logo:hover {
+	fill: #ffffff;
+	/* filter: drop-shadow(0 0 6px #4f9fff); */
+}
