--- a/style.css
+++ b/style.css
@@ -100,10 +100,12 @@ main {
 }
 
 .pfp {
+	border: 2px solid #94e2d5;
 	border-radius: 50%;
 	max-width: 15vw;
 	aspect-ratio: 1/1;
 	object-fit: cover;
+	will-change: transform;
 }
 
 /* Footer styles */
